@@ -1,3 +1,12 @@
+2002-08-20  David Hyatt  <hyatt@apple.com>
+
+	Fix background positioning so that it works with table cells.
+	This fixes the tabs on www.msn.com.
+	
+        * khtml/rendering/render_box.cpp:
+        (RenderBox::printBackground):
+        * khtml/rendering/render_table.h:
+
 2002-08-20  Darin Adler  <darin@apple.com>
 
 	WebCore part of support for tabbing into and out of the toolbar.
